// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu matches Vertical Menu snapshot 1`] = `
<div
  className="sc-bdVaJa bHJNXl"
>
  <ul
    className="ant-menu ant-menu-light ant-menu-root ant-menu-vertical"
    role="menu"
    style={Object {}}
  >
    <li
      aria-disabled={undefined}
      className="ant-menu-item"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={undefined}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={undefined}
      role="menuitem"
      style={Object {}}
      title={undefined}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>First Item</b>",
          }
        }
      />
    </li>
    <li
      aria-disabled={undefined}
      className="ant-menu-item"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={undefined}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={undefined}
      role="menuitem"
      style={Object {}}
      title={undefined}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Second Item",
          }
        }
      />
    </li>
    <li
      aria-disabled={undefined}
      className="ant-menu-item"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={undefined}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={undefined}
      role="menuitem"
      style={Object {}}
      title={undefined}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Third Item",
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`Menu matches default snapshot 1`] = `
<div
  className="sc-bdVaJa bHJNXl"
>
  <ul
    className="ant-menu ant-menu-light ant-menu-root ant-menu-horizontal"
    role="menu"
    style={Object {}}
  >
    <li
      aria-disabled={undefined}
      className="ant-menu-item"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={undefined}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={undefined}
      role="menuitem"
      style={Object {}}
      title={undefined}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>First Item</b>",
          }
        }
      />
    </li>
    <li
      aria-disabled={undefined}
      className="ant-menu-item"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={undefined}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={undefined}
      role="menuitem"
      style={Object {}}
      title={undefined}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Second Item",
          }
        }
      />
    </li>
    <li
      aria-disabled={undefined}
      className="ant-menu-item"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={undefined}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={undefined}
      role="menuitem"
      style={Object {}}
      title={undefined}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Third Item",
          }
        }
      />
    </li>
  </ul>
</div>
`;
